# arch-dotfiles

./: .gitignore
eww/: eww.scss  eww.yuck
eww/bar/: eww.scss  eww.yuck
eww/bar/components/: bar.yuck  battery.yuck  clock.yuck  network.yuck  power.yuck  settings.yuck  workspaces.yuck
eww/components/: bar.yuck  settings.yuck  variables.yuck  volume.yuck
eww/niflveil/: eww.scss  eww.yuck
hypr/: hyprland.conf
niflveil/: Cargo.toml
niflveil/src/: main.rs
tmux/: tmux.conf
